2000-06-15  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout_proc): Fix non-ANSI code in call to
	findslash(), minor cleanups.

2000-06-14  Larry Jones  <larry.jones@sdrc.com>

	* tag.c (val_direntproc): Return R_PROCESS instead of 0.

	* client.c (update_entries): Fix type clash calling gunzip_and_write().
	* server.c (receive_file): Fix type clash calling gunzip_and_write().
	(server_updated): Fix type clash calling buf_output().
	* error.c (error): Make buf char instead of unsigned char to avoid
	type clashes.

	* modules.c (do_module): Change callback_proc to pass argc by
	value instead of by reference: callback procs shouldn't be
	messing with the callers argc/argv, it makes correct memory
	management impossible.  Plug memory leaks.
	* cvs.h: Change to match.
	* checkout.c (checkout_proc): Ditto; use a local argv array instead
	of messing with caller's.
	* modules.c (callback_proc): Ditto.
	* patch.c (patch_proc): Ditto; use a local argv array instead
	of messing with caller's.
	* rtag.c (rtag_proc): Ditto; use a local argv array instead
	of messing with caller's.
	* server.c (expand_proc): Ditto.
	* subr.c (line2argv): Change initial argv_allocated back to 1.

	* checkout.c (findslash): Fix non-ANSI code.

	* sanity.sh (modes3): Fix test names.

2000-06-13  Larry Jones  <larry.jones@sdrc.com>

	* add.c (add): Plug memory leaks.
	* admin.c (admin_fileproc): Ditto.
	* checkout.c (build_dirs_and_chdir): Ditto.
	* edit.c (editors_fileproc): Ditto.
	* log.c (cvslog, log_parse_revlist, log_parse_date): Ditto.
	* rcs.c (RCS_addaccess): Ditto.
	* tag.c (check_fileproc): Ditto.
	* vers_ts.c (Version_TS): Ditto.
	* watch.c (watchers_fileproc): Ditto.

2000-06-12  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (rcsbuf_valword): Set rcsbuf->vlen to keep rcsbuf_valcopy()
	from allocating more memory than needed for @ strings.  Don't declare
	unless PRESERVE_PERMISSIONS_SUPPORT (since not defined).

	* rcs.c (RCS_abandon): New function to abandon changes.